_sass/_layout.scss
/* ... */
/**
* Site footer
*/
.site-footer {
	border-top: 1px solid $grey-color-light;
	padding: $spacing-unit 0;
}

.footer-heading {
	font-size: 18px;
	margin-bottom: $spacing-unit / 2;
}

.contact-list,
.social-media-list {
	list-style: none;
	margin-left: 0;
}

.footer-col-wrapper {
	font-size: 15px;
	color: $grey-color;
	margin-left: -$spacing-unit / 2;
	@extend %clearfix;
}

.footer-col {
	float: left;
	margin-bottom: $spacing-unit / 2;
	padding-left: $spacing-unit / 2;
}

.footer-col-1 {
	width: -webkit-calc(35% - (#{$spacing-unit} / 2));
	width:         calc(35% - (#{$spacing-unit} / 2));
}

.footer-col-2 {
	width: -webkit-calc(20% - (#{$spacing-unit} / 2));
	width:         calc(20% - (#{$spacing-unit} / 2));
}

.footer-col-3 {
	width: -webkit-calc(45% - (#{$spacing-unit} / 2));
	width:         calc(45% - (#{$spacing-unit} / 2));
}

@include media-query($on-laptop) {
	.footer-col-1,
	.footer-col-2 {
		width: -webkit-calc(50% - (#{$spacing-unit} / 2));
		width:         calc(50% - (#{$spacing-unit} / 2));
	}

	.footer-col-3 {
		width: -webkit-calc(100% - (#{$spacing-unit} / 2));
		width:         calc(100% - (#{$spacing-unit} / 2));
	}
}

@include media-query($on-palm) {
	.footer-col {
		float: none;
		width: -webkit-calc(100% - (#{$spacing-unit} / 2));
		width:         calc(100% - (#{$spacing-unit} / 2));
	}
}



/**
* Page content
*/
.page-content {
	padding: 15px 0 $spacing-unit 0;
	background-color:none;
	margin-top:0px;
}

.page-heading {
	font-size: 20px;
}

.post{
	margin-top:10px;
	line-height:1.4em;
	font-size: 17px;
	max-width:800px;
}
.post-list {
	margin-left: 2px;
	list-style: none;

	> li {
		// margin-bottom: $spacing-unit;
		margin-bottom: 15px;
        line-height:1.2em;
	}
}

.post-list--writing {
	> li {
		margin-bottom: 12px;
	}

	.post-list-row {
		display: flex;
		align-items: baseline;
		gap: 8px;
		flex-wrap: wrap;
	}

	.post-link {
		display: inline;
	}

	.post-meta {
		flex: 0 0 65px;
		min-width: 65px;
		text-align: left;
		white-space: nowrap;
	}
}

.post-meta {
	font-size: $small-font-size;
	color: $grey-color;
}

.post-link {
	display: block;
	font-size: 14px;
	font-weight: bold;
    color:#111;
}



.post-link:visited {
    color:#111;
}


.post-link:hover {
    color:#555;
}
.exp-date{
    display: block;
    float:left;
    width:105px;
    color:#666;
    // border-right: solid 1px gray;
    // margin-right:4px;
    // margin-bottom:1px;
    // height:12px;
}

#exp-list li{
    margin-bottom:2px;
}


/**
* Posts 
*/
.post-header {
	margin-bottom: $spacing-unit;
}

.post-title {
	line-height: 1.5;

	// border-bottom:solid;
	// border-bottom-width:1px;
	border-bottom-color:lightgray;
	// padding-bottom:4px;


	@include media-query($on-laptop) {
		font-size: 32px;
	}
}
.post-content {
	margin-bottom: $spacing-unit;


	h2 {
		font-size: 32px;

		@include media-query($on-laptop) {
			font-size: 28px;
		}
	}

	h3 {
		font-size: 26px;

		@include media-query($on-laptop) {
			font-size: 22px;
		}
	}

	h4 {
		font-size: 20px;

		@include media-query($on-laptop) {
			font-size: 18px;
		}
	}
}

.blog a{
	text-decoration: underline;
}

.blog a:hover{
	color:gray;
}


/**
* Projects
*/
.project-header {
	margin-bottom: $spacing-unit;
	border-bottom:solid;
	border-bottom-width:1px;
	border-bottom-color:lightgray;
}

.project-title {
	font-size: 36px;
	line-height: 1;
	@include media-query($on-laptop) {
		font-size: 22px;
	}
	margin-top:5px;


}
.project-subtitle {
	margin-left:2px;
	font-size: 18px;
	line-height: 1;
	letter-spacing: 0px;
	color:$grey-color-dark;
	@include media-query($on-laptop) {
		font-size: 14px;
	}
}

.project-content {
	margin-bottom: $spacing-unit;

	h2 {
		font-size: 32px;

		@include media-query($on-laptop) {
			font-size: 28px;
		}
	}

	h3 {
		font-size: 26px;

		@include media-query($on-laptop) {
			font-size: 22px;
		}
	}

	h4 {
		font-size: 20px;

		@include media-query($on-laptop) {
			font-size: 18px;
		}
	}
}

.project-meta {
	font-size: $small-font-size;
	font-size:13px;
	color: $grey-color;
	color:#111;
	float:left;
	width:100%;
	padding-top:4px;
	padding-left:2px;
	color:$grey-color-dark;

}
.project-meta-subtitle {
	font-size:11px;
	color:#f3f3f3;
	float:left;
	width:73%;
	padding-top:4px;
	padding-left:2px;
}
.projectBox>.cover>.titles{
	transition: margin-top 0.2s;
	opacity:0.01;
}

.projectBox{
	position: relative;
	background-color:none;
	margin:5px;
	float:left;
	width:31.5%;
	min-height:100px;
	max-height:240px;
	border-bottom-width:1px;
	padding-bottom:0px;
	padding-top:0px;
	border:solid;
	border-width:0px;
	margin:3px;
	border-right:none;

	padding-left:0px;
	border-:solid;
	background-color:#F3F3F3;
	overflow:hidden;
	opacity:1;
	@include media-query($on-palm) {
		width:98%;
	}
	width:100;
	transition:all 1s;


}
.projectBox img{
	width:100%;
	float:right;
	top:0px;
	opacity:0;
	z-index:0;
	transition:all 1s;
}
.projectBox .cover{
	position:absolute;
	background-color:$brand-color;
	z-index:1;
	width:100%;
	height:100%;
	opacity:0.01;
	transition: opacity 0.2s;
	padding:5px;
	transition:linear all .25s;


}

.projectBox:hover{
	cursor:pointer;
	background-color:$brand-color;
	color:white;
	border-left-color:black;
	
}
.projectBox:hover .cover{
	opacity:0.96;
	// transition: opacity 0.2s;
	transition:linear all .15s;
	
}
/* ... */

